Zenia-Graph-Sf/force-app/main/default/objects/Lead/fields/Annual_Growth__c.field-meta.xml
<CustomField>
    <fullName>Annual_Growth__c</fullName>
    <label>Annual Growth</label>
    <length>200</length>
    <type>Text</type>
</CustomField>