Zenia-Graph-Sf/force-app/main/default/objects/Lead/fields/Datasource__c.field-meta.xml
<CustomField>
    <fullName>Datasource__c</fullName>
    <label>Datasource</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crunch Base</fullName>
            </value>
            <value>
                <fullName>linkedin</fullName>
                <label>LinkedIn</label>
            </value>
            <value>
                <fullName>salesforce</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>dbpedia</fullName>
                <label>DBPedia</label>
            </value>
            <value>
                <fullName>zoominfo</fullName>
                <label>ZoomInfo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>