Zenia-Graph-Sf/force-app/main/default/objects/Lead/fields/Niacs_Code__c.field-meta.xml
<CustomField>
    <fullName>Niacs_Code__c</fullName>
    <label>NAICS Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>