Zenia-Graph-Sf/force-app/main/default/objects/Lead/fields/No_Of_Employees__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Employees__c</fullName>
    <label>No. Of Employees</label>
    <length>200</length>
    <type>Text</type>
</CustomField>