Zenia-Graph-Sf/force-app/main/default/objects/Lead/fields/Operating_Years__c.field-meta.xml
<CustomField>
    <fullName>Operating_Years__c</fullName>
    <label>Operating Years</label>
    <length>60</length>
    <type>Text</type>
</CustomField>