Zenia-Graph-Sf/force-app/main/default/objects/Lead/fields/Quarterly_Growth__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Growth__c</fullName>
    <label>Quarterly Growth</label>
    <length>200</length>
    <type>Text</type>
</CustomField>