Zenia-Graph-Sf/force-app/main/default/objects/Lead/fields/Vector_Score__c.field-meta.xml
<CustomField>
    <fullName>Vector_Score__c</fullName>
    <label>Vector Score</label>
    <length>60</length>
    <type>Text</type>
</CustomField>