Zenia-Graph-Sf/force-app/main/default/objects/Lead/listViews/ZeniaGraphListView.listView-meta.xml
<ListView>
    <fullName>ZeniaGraphListView</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Datasource__c</columns>
    <columns>LEAD.INDUSTRY</columns>
    <columns>SICCode__c</columns>
    <columns>Niacs_Code__c</columns>
    <filterScope>Mine</filterScope>
    <label>ZeniaGraphListView</label>
</ListView>